# prozubilib

./: .gitmodules  CMakeLists.txt  ChangeLog  MKBCodes.sqlite  Makefile.am  aclocal.m4  alloc.h  autogen.sh  bill.h  cases.h  compile_commands.json  configure.ac  diagnosis.h  doctors.h  documents.h  documents_new.h  docx.h  enum.h  ffind.h  fm.h  image2ascii.h  images.h  kdata_conf.h  log.h  mkb.h  nomenklatura.h  nomenklatura.sqlite  passport.h  planlecheniya.h  prices.h  prozubilib.c  prozubilib.h  prozubilib_conf.h  rtf.h  sfind.h  stb_image.c  str.h  strpush.h  strrep.h  strsplit.h  (+5 more)
Templates/: DnevnikTemplate.rtf  IDS.rtf  IDSImplant.rtf  IDSSur.rtf  IDSorto.rtf  Medkarta.rtf  aktSdachiPriemaTemplate.rtf  dogovor.rtf  dogovorOGarantii.rtf  dopSoglasheniye.rtf  informsoglasiye.rtf  planLecheniyaTemplate.rtf  uchprocess.rtf
cmake/: i386-pc-mingw32.cmake
include/: bill.h  cases.h  diagnosis.h  doctors.h  documents.h  docx.h  enum.h  fm.h  fstrrep.h  image2ascii.h  images.h  mkb.h  nomenklatura.h  passport.h  planlecheniya.h  prices.h  prozubilib_conf.h  rtf.h  rtfutf8tocp1251.h  template.h  text_on_bitmap.h  thread.h  translit.h  utf.h  yclients.h  zip_entry_read.h
include/tiff/: tiffconf.h
src/: bill.c  cases.c  diagnosis.c  doctors.c  documents.c  fm.c  images.c  mkb.c  nomenklatura.c  passport.c  planlecheniya.c  prices.c  prozubilib.c  rtf.c  rtfutf8tocp1251.c  stb_image.c  template.c  text_on_bitmap.c  yclients.c
win32/: prozubilib.dsp  prozubilib.dsw  prozubilib.ncb  prozubilib.opt  prozubilib.plg
win32/Debug/: prozubilib.pch  vc60.idb
win32/tiff/include/: port.h  tiffio.h
win32/tiff/lib/: libtiff.la  libtiffxx.la
win32/tiff/lib/pkgconfig/: libtiff-4.pc
